fix board member cards flex wrap

--- a/components/boardmembers/BoardMembers.css
+++ b/components/boardmembers/BoardMembers.css
@@ -4,6 +4,11 @@
   justify-content: space-evenly;
   align-items: center;
   padding-bottom: 60px;
+  flex-wrap: wrap;
+}
+
+.SingleBoardCard {
+  padding: 10px;
 }
 
 .BoardMembers {
@@ -12,6 +17,7 @@
   justify-content: space-evenly;
   align-items: center;
   padding-bottom: 60px;
+  flex-wrap: wrap;
 }
 
 .AdvisoryBoard {
@@ -20,6 +26,7 @@
   justify-content: space-evenly;
   align-items: center;
   padding-bottom: 60px;
+  flex-wrap: wrap;
 }
 
 .Card {
